<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.kira.mypublishplatform.model.OldInfoModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/person"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.person.PersonFragment">


        <RelativeLayout
            android:id="@+id/me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/bg_person"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/head"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/dp_10"
                android:src="@mipmap/head_image"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/head"
                android:text="@={model.oldName}"
                android:textStyle="bold"
                android:textSize="@dimen/text_h"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/dp_8"
                android:text="个人资料"
                android:textColor="@color/white"
                android:background="@drawable/border_search"/>

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/me">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                

                <LinearLayout
                    android:id="@+id/feedback"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_60"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_8"
                    android:background="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/message">

                    <ImageView
                        android:id="@+id/icon_address"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@mipmap/feedback"
                        android:padding="@dimen/dp_5"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/title_address"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/feed_back"
                        android:layout_marginStart="@dimen/dp_10"
                        android:textColor="@color/text_selected"
                        android:textSize="@dimen/text_xh"
                        android:gravity="center_vertical" />

                    <ImageView
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="match_parent"
                        android:src="@drawable/more" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_60"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_8"
                    android:background="@color/white"
                    android:layout_marginTop="@dimen/dp_20"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/icon_order"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@mipmap/notification"
                        android:padding="@dimen/dp_5"
                        android:scaleType="centerInside" />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8">

                        <TextView
                            android:id="@+id/title_order"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/my_order"
                            android:layout_marginStart="@dimen/dp_10"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:textColor="@color/text_selected"
                            android:textSize="@dimen/text_xh"
                            android:gravity="start|center_vertical" />

                        <TextView
                            android:id="@+id/order_count"
                            android:layout_width="@dimen/dp_25"
                            android:layout_height="@dimen/dp_25"
                            android:background="@drawable/shape_dot_red_bg"
                            android:gravity="center"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="@dimen/dp_10"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:text="99"
                            android:visibility="gone"
                            android:textColor="@color/white" />


                    </RelativeLayout>

                    <ImageView
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="match_parent"
                        android:src="@drawable/more" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_60"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_8"
                    android:background="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/version">

                    <ImageView
                        android:id="@+id/icon_phone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="@dimen/dp_5"
                        android:src="@mipmap/about"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/title_phone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/about_us"
                        android:layout_marginStart="@dimen/dp_10"
                        android:textColor="@color/text_selected"
                        android:textSize="@dimen/text_xh"
                        android:gravity="center_vertical" />

                    <ImageView
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="match_parent"
                        android:src="@drawable/more" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/version"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_60"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_8"
                    android:background="@color/white"
                    android:layout_marginTop="@dimen/dp_20"
                    app:layout_constraintTop_toBottomOf="@+id/feedback">

                    <ImageView
                        android:id="@+id/icon_password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="@dimen/dp_5"
                        android:src="@mipmap/version"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/title_version"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:text="@string/version_view"
                        android:layout_marginStart="@dimen/dp_10"
                        android:textColor="@color/text_selected"
                        android:textSize="@dimen/text_xh"
                        android:gravity="center_vertical" />

                    <TextView
                        android:id="@+id/id_version"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:text="@{model.socialNo}"
                        android:layout_marginStart="@dimen/dp_10"
                        android:textColor="@color/text_selected"
                        android:textSize="@dimen/text_xh"
                        android:gravity="center_vertical|end" />

                    <ImageView
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="match_parent"
                        android:src="@drawable/more" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_60"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_50"
                    android:background="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/about">


                    <TextView
                        android:id="@+id/title_logout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/log_out"
                        android:textColor="@color/text_selected"
                        android:textSize="@dimen/text_xh" />


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>